<resources>
    <string name="app_name">CamAndroid</string>
    <string name="latitude">Latitude:</string>
    <string name="yawrate">YawRate:</string>
    <string name="speed">Speed:</string>
    <string name="timestamp">Timestamp:</string>
    <string name="stationid">StationId:</string>
    <string name="updating">Updating ...</string>
    <string name="google_maps_key">AIzaSyBgTgVU1NDlCWjnAn77hK1Zyli2vrNDQ9M</string>
    <string name="action_settings">Settings</string>


</resources>
